<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity"
    android:background="?attr/colorSurface">

    <include layout="@layout/title_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <!-- halfway guideline -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/half_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <!-- item name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_name_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- item description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_description_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_description_head"
                app:layout_constraintEnd_toStartOf="@+id/description_camera_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_name_text"
                app:layout_constraintHorizontal_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton style="@style/rounded_button"
                android:id="@+id/description_camera_button"
                android:src="@drawable/icon_camera"
                android:layout_margin="2dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/item_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_description_text"
                app:layout_constraintTop_toTopOf="@+id/item_description_text" />

            <!-- item comment -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_comment_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_comment_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_description_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_comment_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- item make & model -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_make_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_make_head"
                app:layout_constraintEnd_toStartOf="@+id/half_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_comment_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_make_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_model_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_model_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_make_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_model_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- item serial no & value -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_serial_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_serial_head"
                app:layout_constraintEnd_toStartOf="@+id/serialno_camera_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_make_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_serial_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/serialno_camera_button"
                style="@style/rounded_button"
                android:layout_margin="2dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_button"
                android:src="@drawable/icon_camera"
                app:layout_constraintBottom_toBottomOf="@+id/item_serial_text"
                app:layout_constraintEnd_toStartOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_serial_text" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_value_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_value_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_serial_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_value_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/item_date_head"
                style="@style/gray_text"
                android:layout_marginTop="10dp"
                android:text="@string/item_date_head"
                app:layout_constraintEnd_toStartOf="@+id/item_date_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_serial_text" />

            <TextView
                android:id="@+id/item_date_text"
                style="@style/item_details_text"
                android:text="@string/item_date_placeholder"
                app:layout_constraintEnd_toStartOf="@+id/item_date_button"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_date_head" />

            <ImageButton style="@style/rounded_button"
                android:id="@+id/item_date_button"
                android:src="@drawable/icon_calendar"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/item_date_text"
                app:layout_constraintEnd_toStartOf="@+id/half_guideline"
                app:layout_constraintStart_toEndOf="@+id/item_date_text"
                app:layout_constraintTop_toTopOf="@+id/item_date_head" />

            <TextView
                android:id="@+id/edit_tags_text"
                style="@style/gray_text"
                android:text="Edit Tags"
                app:layout_constraintEnd_toEndOf="@+id/item_tags_button"
                app:layout_constraintEnd_toStartOf="@+id/item_tags_button"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_date_head"
                android:layout_marginLeft="6dp"
                app:layout_constraintHorizontal_weight="1"/>

            <ImageButton style="@style/rounded_button"
                android:id="@+id/item_tags_button"
                android:src="@drawable/icon_tag"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/item_date_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_tags_text"
                app:layout_constraintTop_toTopOf="@+id/item_date_head" />


            <TextView
                android:id="@+id/item_tags_head"
                style="@style/gray_text"
                android:layout_marginTop="10dp"
                android:text="@string/item_tags_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_date_text" />

            <TextView
                android:id="@+id/item_tags_text"
                style="@style/item_details_text"
                android:text="@string/item_tags_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_tags_head" />

            <TextView
                android:id="@+id/item_images_head"
                style="@style/gray_text"
                android:layout_marginTop="10dp"
                android:text="@string/item_text_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_tags_text" />

            <ImageButton style="@style/rounded_button"
                android:id="@+id/image_take_button"
                android:layout_marginTop="2dp"
                android:src="@drawable/icon_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_images_head" />

            <ImageButton style="@style/rounded_button"
                android:id="@+id/image_upload_button"
                android:layout_marginTop="2dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/icon_upload"
                app:layout_constraintStart_toEndOf="@+id/image_take_button"
                app:layout_constraintTop_toBottomOf="@+id/item_images_head" />
            <!--            using marginStart and marginTop for this particular case instead of blanket layout_margin, because layout_margin will overwrite -->


            <!--            view that stores images associated with this item using item_list_content layout -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_images_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/image_take_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/taskbar_edit"/>
    <!--        add view_item_taskbar.xml layout to this in code -->

</LinearLayout>