<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="?colorSurface"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="75"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/omninventory_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="Please log in to continue"
                android:textColor="?colorOnSurface"
                android:textSize="18dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textPersonName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password (8-20 characters)"
                android:inputType="textPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="Don't have an account?"
                    android:textColor="?colorOnSurface"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/signup_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClickSignUpLink"
                    android:padding="3dp"
                    android:text="Sign Up"
                    android:textColor="?colorPrimary"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?colorSecondary"
                android:text="Log in"
                android:textColor="?colorOnSecondary"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>