...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/tag_button_label"
            android:src="@drawable/taskbar_tag" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/add_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_button_label"
            android:src="@drawable/taskbar_add" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/delete_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/delete_button_label"
            android:src="@drawable/taskbar_delete" />

...
